text in align corign

--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -356,7 +356,7 @@ v_C=V_p e^{-\frac{t}{RC}}
 \end{align*}
 جہاں \عددی{V_p=\SI{15}{\volt}} ہے۔اس مساوات سے دس ملی سیکنڈ بعد \عددی{v_C=\SI{5.5}{\volt}} حاصل ہوتا ہے جس سے
 \begin{align*}
-V_{\textrm{بل}}=15-5.5=\SI{9.5}{\volt}
+V_{\text{بل}}=15-5.5=\SI{9.5}{\volt}
 \end{align*}
 حاصل ہوتا ہے۔
 
@@ -487,9 +487,9 @@ v_O=V_{p} e^{-\frac{1}{RC f_c}} \approx V_p \left(1-\frac{1}{RC f_c} +\cdots \ri
 رکھا جاتا ہے۔یہ مساوات \اصطلاح {حیطہ اتار کار} کی مساوات ہے۔اگر کپیسٹر کو اس مساوات سے حاصل قیمت سے زیادہ رکھا جائے تب خارجی اشارہ تیزی سے تبدیل ہونے والے داخلی اشارے کو نہیں پکڑ سکے گا۔اگر کپیسٹر کی قیمت اس سے کم رکھی جائے تب خارجی اشارے میں \اصطلاح {بل}\فرہنگ{بل}\حاشیہب{ripple} زیادہ پایا جائے گا۔ 
 
 \حصہ{منبع برقی دباو}
-سمت کار کے خارجی جانب زیادہ قیمت کا کپیسٹر نسب کر کے \اصطلاح {منبع برقی دباو}\فرہنگ{منبع برقی دباو}\فرہنگ{برقی دباو منبع}\حاشیہب{power supply}  حاصل ہوتا ہے جیسا شکل \حوالہ{شکل_پاور_منبع} الف میں دکھایا گیا ہے۔اس پر کپیسٹر کے متوازی برقی بوجھ لادا جاتا ہے جسے عموماً \عددی{R_L} سے ظاہر کیا جاتا ہے۔\اصطلاح {منبع برقی دباو} یعنی برقی طاقت کے \اصطلاح {منبع} کو  گھریلو بجلی یا صنعتی بجلی فراہم کرتے ہوئے یک سمتی برقی دباو \عددی{V_{\textrm{یکسمتی}}} حاصل کیا جاتا ہے۔
+سمت کار کے خارجی جانب زیادہ قیمت کا کپیسٹر نسب کر کے \اصطلاح {منبع برقی دباو}\فرہنگ{منبع برقی دباو}\فرہنگ{برقی دباو منبع}\حاشیہب{power supply}  حاصل ہوتا ہے جیسا شکل \حوالہ{شکل_پاور_منبع} الف میں دکھایا گیا ہے۔اس پر کپیسٹر کے متوازی برقی بوجھ لادا جاتا ہے جسے عموماً \عددی{R_L} سے ظاہر کیا جاتا ہے۔\اصطلاح {منبع برقی دباو} یعنی برقی طاقت کے \اصطلاح {منبع} کو  گھریلو بجلی یا صنعتی بجلی فراہم کرتے ہوئے یک سمتی برقی دباو \عددی{V_{\text{یکسمتی}}} حاصل کیا جاتا ہے۔
  
-بے بوجھ منبع برقی دباو کی کارکردگی بالکل چوٹی حاصل کار کی طرح ہے جبکہ برقی بوجھ سے لدے منبع برقی دباو کی کارکردگی حیطہ اتار کار کی طرح ہے۔البتہ منبع میں ہماری کوشش ہوتی ہے کہ  \عددی{V_{\textrm{یکسمتی}}} میں \اصطلاح {بل} کم سے کم ہو تا کہ اسے یک سمتی برقی دباو کے طور استعمال کرنا ممکن ہو۔منبع برقی دباو تقریباً ہر برقیاتی آلہ یا مشین میں پایا جاتا ہے۔
+بے بوجھ منبع برقی دباو کی کارکردگی بالکل چوٹی حاصل کار کی طرح ہے جبکہ برقی بوجھ سے لدے منبع برقی دباو کی کارکردگی حیطہ اتار کار کی طرح ہے۔البتہ منبع میں ہماری کوشش ہوتی ہے کہ  \عددی{V_{\text{یکسمتی}}} میں \اصطلاح {بل} کم سے کم ہو تا کہ اسے یک سمتی برقی دباو کے طور استعمال کرنا ممکن ہو۔منبع برقی دباو تقریباً ہر برقیاتی آلہ یا مشین میں پایا جاتا ہے۔
 
 چونکہ منبع برقی دباو داخلی طاقت \عددی{\SI{50}{\hertz}} کے سائن نما \عددی{v_i} سے حاصل کرتا ہے لہٰذا \عددی{C} بھی اسی تعدد سے بھرتا ہے۔\عددی{v_i} کے دو چوٹیوں کے مابین \عددی{\tfrac{1}{50}=\SI{20}{\milli \second}}  (بیس ملی سیکنڈ )  کے وقفے  کے دوران \عددی{R_L} کو کپیسٹر \عددی{C} طاقت مہیا کرتا ہے۔
 \begin{figure}
@@ -557,7 +557,7 @@ C&=\SI{40}{\micro \farad}
  
 کامل ڈایوڈ تصور کرتے ہوئے خارجی برقی دباو کی زیادہ سے زیادہ قیمت \عددی{V_p} جبکہ اس میں کل \اصطلاح {بل} \عددی{\Delta V} لکھتے ہوئے
 \begin{align}
-V_{\textrm{یکسمتی}}=V_p-\frac{\Delta V}{2}
+V_{\text{یکسمتی}}=V_p-\frac{\Delta V}{2}
 \end{align}
 حاصل ہو گا۔
 \جزوحصہ{برقیاتی شکنجہ}
