--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -42,7 +42,7 @@
 \begin{gather}
 \begin{aligned}
 v_{GS} &\le  V_t && & & \text{منقطع} \\
-v_{GS} & > V_t && & & \text{چالو یا غیر منقطع}
+v_{GS} & > V_t && & & \text{\RL{چالو یا غیر منقطع}}
 \end{aligned}
 \end{gather}
 یوں \عددی{v_{GS}=V_t} کو \اصطلاح {دہلیز} تصور کیا جا سکتا ہے جس کی ایک جانب ماسفیٹ چالو جبکہ اس کی دوسری جانب ماسفیٹ منقطع رہتا ہے۔چالو ماسفیٹ کے ڈرین اور سورس سروں کے مابین برقی دباو \عددی{v_{DS}} لاگو کرنے سے  \اصطلاح {پیدا کردہ راہ} میں برقی رو \عددی{i_{DS}} گزرے گی۔چونکہ گیٹ کی برقی رو کی قیمت صفر ہے لہٰذا ڈرین سرے پر برقی رو \عددی{i_D} اور سورس سرے پر برقی رو \عددی{i_S} کی قیمتیں برابر ہوں گی یعنی 
@@ -81,7 +81,7 @@ i_D &=i_S= i_{DS}
 
 شکل \حوالہ{شکل_بڑھاتے_ماسفیٹ_کے_خط_منفی} الف میں سورس خطہ برقی زمین یعنی صفر وولٹ پر ہے جبکہ گیٹ پر \عددی{v_{GS}} برقی دباو ہے۔ یوں یہاں گیٹ اور سلیکان پتری کے مابین \عددی{(v_{GS}-0=v_{GS})}  برقی دباو پایا جاتا ہے اور پیدا کردہ راہ کی گہرائی اضافی برقی دباو یعنی \عددی{(v_{GS}-V_t)} پر منحصر ہو گی جسے شکل میں \عددی{g_1} کہا گیا ہے۔اسی شکل میں ڈرین خطہ \عددی{v_{DS}} وولٹ پر ہے اور یوں یہاں پیدا کردہ راہ کی گہرائی \عددی{(v_{GS}-v_{DS}-V_t)} کے اضافی برقی دباو پر منحصر ہو گی جسے شکل میں \عددی{g_2} کہا گیا ہے۔آپ دیکھ سکتے ہیں کہ \عددی{g_2} کی مقدار \عددی{g_1} سے کم ہے۔یوں پیدا کردہ راہ تکونی شکل اختیار کر لے گا۔ \عددی{v_{DS}} کی مقدار صفر ہونے کی صورت میں \عددی{g_1} اور \عددی{g_2} برابر ہوتے ہیں اور \اصطلاح {پیدا کردہ راہ کی مزاحمت} یعنی  \اصطلاح {چالو ماسفیٹ کی مزاحمت}
 \begin{align}\label{مساوات_ماسفیٹ_چالو_ماسفیٹ_کی_مزاحمت}
-\textup{مزاحمت}=\frac{\textup{لمبائی}}{\textup{موصلیت کا مستقل} \times \textup{رقبہ}}=\frac{L}{\sigma W g}
+\text{\RL{مزاحمت}}=\frac{\text{لمبائی}}{\text{\RL{موصلیت کا مستقل}} \times \textup{رقبہ}}=\frac{L}{\sigma W g}
 \end{align}
  کے برابر ہوتی ہے۔ \عددی{v_{DS}} کی مقدار صفر وولٹ سے بڑھانے سے \عددی{g_2}  کم ہوتا ہے اور پیدا کردہ راہ کی مزاحمت بڑھتی ہے جس سے \عددی{v_{DS} - i_{DS}}  خط کی ڈھلوان کم ہو گی۔شکل  الف میں بڑھتے \عددی{v_{DS}} کے ساتھ \عددی{v_{DS}  - i_{DS}} خط کی ڈھلوان بتدریج کم ہوتی دکھائی گئی ہے۔
 
@@ -118,7 +118,7 @@ v_{GS} \le V_t
 \جزوحصہء{چالو}
 \begin{gather} \label{مساوات_میدانی_کارکردگی_کے_خطے}
 \begin{aligned}
-v_{GS}-v_{DS} & \ge V_t &&&& \textup{غیر افزائندہ}\\
+v_{GS}-v_{DS} & \ge V_t &&&& \text{\RL{غیر افزائندہ}}\\
 v_{GS}-v_{\textup{DSدبوچ}} &=V_t &&&& \textup{نقطہ دبوچ}\\
 v_{GS}-v_{DS}& \le V_t &&&& \textup{افزائندہ}
 \end{aligned}
@@ -127,8 +127,8 @@ v_{GS}-v_{DS}& \le V_t &&&& \textup{افزائندہ}
 \begin{gather} \label{مساوات_میدانی_کارکردگی_کے_خطے_الف}
 \begin{aligned}
 v_{GS} & \le  V_t &&&& \textup{منقطع}\\
-v_{DS}& \le v_{GS}-V_t &&&& \textup{غیر افزائندہ}\\
-v_{\textup{DSدبوچ}}& = v_{GS}-V_t &&&& \textup{نقطہ دبوچ}\\
+v_{DS}& \le v_{GS}-V_t &&&& \text{\RL{غیر افزائندہ}}\\
+v_{\textup{DSدبوچ}}& = v_{GS}-V_t &&&& \text{\RL{نقطہ دبوچ}}\\
 v_{DS} & \ge v_{GS}-V_t &&&&\textup{افزائندہ}
 \end{aligned}
 \end{gather}
@@ -136,8 +136,8 @@ v_{DS} & \ge v_{GS}-V_t &&&&\textup{افزائندہ}
 \begin{gather}
 \begin{aligned}
 v_{GS} & \le  V_t &&&& \textup{منقطع}\\
-v_{GD}& \ge V_t &&&& \textup{غیر افزائندہ}\\
-v_{\textup{GDدبوچ}}& =  V_t &&&& \textup{نقطہ دبوچ}\\
+v_{GD}& \ge V_t &&&& \text{\RL{غیر افزائندہ}}\\
+v_{\textup{GDدبوچ}}& =  V_t &&&& \text{\RL{نقطہ دبوچ}}\\
 v_{GD} & \le V_t &&&&\textup{افزائندہ}
 \end{aligned}
 \end{gather}
@@ -341,16 +341,16 @@ i_{DS}&=0
 \تحریر{nMOSFET}  کو غیر افزائندہ خطے میں استعمال کرنے کی خاطر گیٹ اور سورس کے مابین \عددی{V_t}  سے زیادہ برقی دباو مہیا کیا جاتا ہے اور ڈرین-سورس سروں کے مابین برقی دباو کو راہ دبوچ برقی دباو \زیرنوشت{v}{DS}{دبوچ} سے کم رکھا جاتا ہے یعنی
 \begin{gather}
 \begin{aligned}
-v_{GS} & > V_t &&&& \textup{راہ پیدا}\\
-v_{DS}&  \le v_{\textup{DSدبوچ}}  &&&& \textup{نقطہ دبوچ}\\
+v_{GS} & > V_t &&&& \text{\RL{راہ پیدا}}\\
+v_{DS}&  \le v_{\textup{DSدبوچ}}  &&&& \text{\RL{نقطہ دبوچ}}\\
 & \le v_{GS}-V_t
 \end{aligned}
 \end{gather}
 اسی طرح \تحریر{nMOSFET}  کو افزائندہ خطے میں استعمال کرنے کی خاطر گیٹ اور سورس کے مابین \عددی{V_t} سے زیادہ برقی دباو  مہیا کیا جاتا ہے اور ڈرین-سورس سروں کے مابین برقی دباو کو راہ دبوچ برقی دباو \زیرنوشت{v}{DS}{دبوچ}  سے زیادہ رکھا جاتا ہے یعنی
 \begin{gather}
 \begin{aligned}
-v_{GS}& > V_t &&&& \textup{راہ پیدا}\\
-v_{DS}& \ge v_{\textup{DSدبوچ}} &&&& \textup{نقطہ دبوچ}\\
+v_{GS}& > V_t &&&& \text{\RL{راہ پیدا}}\\
+v_{DS}& \ge v_{\textup{DSدبوچ}} &&&& \text{\RL{نقطہ دبوچ}}\\
 & \ge v_{GS}-V_t
 \end{aligned}
 \end{gather}
@@ -374,7 +374,7 @@ R=\frac{v_{DS}}{i_{DS}}=\frac{1}{k_n' \left[\frac{W}{L} \right ] \left[v_{GS}-V_
 \begin{align}\label{مساوات_ماسفیٹ_نقطہ _دبوچ_پر_برقی_رو}
 i_{DS}=\frac{k_n}{2} v_{DS}^2
 \end{align}
-حاصل ہوتا ہے جسے شکل \حوالہ{شکل_ماسفیٹ_سادہ_خط} میں ماسفیٹ کے خطوط پر کھینچا گیا ہے جبکہ مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو} کو شکل \حوالہ{شکل_ماسفیٹ_دبوچ} میں کھینچا گیا ہے۔باب \حوالہ{باب_دو_جوڑ_ٹرانزسٹر} میں \اصطلاح {دو جوڑ ٹرانزسٹر} کے غیر افزائندہ اور افزائندہ خطے دکھائے گئے ہیں۔ان کا ماسفیٹ کے خطوں کے ساتھ موازنہ کریں۔ٹرانزسٹر تقریباً \عددی{\SI{0.2}{\volt}} سے کم \عددی{v_{CE}} پر غیر افزائندہ جبکہ اس سے زیادہ برقی دباو پر افزائندہ ہوتا ہے۔ماسفیٹ \عددی{v_{DS \textrm{دبوچ}}} سے کم برقی دباو پر غیر افزائندہ جبکہ اس سے زیادہ برقی دباو پر افزائندہ ہوتا ہے جہاں \عددی{v_{DS \textrm{دبوچ}}} کی قیمت مساوات \حوالہ{مساوات_ماسفیٹ_نقطہ _دبوچ} سے حاصل کی جاتی ہے۔
+حاصل ہوتا ہے جسے شکل \حوالہ{شکل_ماسفیٹ_سادہ_خط} میں ماسفیٹ کے خطوط پر کھینچا گیا ہے جبکہ مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو} کو شکل \حوالہ{شکل_ماسفیٹ_دبوچ} میں کھینچا گیا ہے۔باب \حوالہ{باب_دو_جوڑ_ٹرانزسٹر} میں \اصطلاح {دو جوڑ ٹرانزسٹر} کے غیر افزائندہ اور افزائندہ خطے دکھائے گئے ہیں۔ان کا ماسفیٹ کے خطوں کے ساتھ موازنہ کریں۔ٹرانزسٹر تقریباً \عددی{\SI{0.2}{\volt}} سے کم \عددی{v_{CE}} پر غیر افزائندہ جبکہ اس سے زیادہ برقی دباو پر افزائندہ ہوتا ہے۔ماسفیٹ \عددی{v_{DS \text{دبوچ}}} سے کم برقی دباو پر غیر افزائندہ جبکہ اس سے زیادہ برقی دباو پر افزائندہ ہوتا ہے جہاں \عددی{v_{DS \text{دبوچ}}} کی قیمت مساوات \حوالہ{مساوات_ماسفیٹ_نقطہ _دبوچ} سے حاصل کی جاتی ہے۔
 شکل \حوالہ{شکل_ماسفیٹ_سادہ_خط} اور  \حوالہ{شکل_ماسفیٹ_دبوچ} میں \عددی{k_n=\SI{0.2}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1}{\volt}} ہیں۔
 
 %
@@ -1133,7 +1133,7 @@ I_{DS2}=\frac{k_n}{2} \left(V_{GS2}-V_t \right )^2
 
 %=========
 \حصہ{ماسفیٹ ایمپلیفائر کا ترسیمی تجزیہ}
-ماسفیٹ کو بطور ایمپلیفائر استعمال کر نے کی خاطر اسے افزائندہ خطے میں مائل کیا جاتا ہے۔شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_ترسیمی_تجزیہ} میں ماسفیٹ ایمپلیفائر دکھایا گیا ہے۔ساتھ ہی ماسفیٹ کے خطوط اور برقی خطِ بوجھ بھی دکھایا گیا ہے۔افزائندہ خطے کے حد کو \عددی{v_{DS\textrm{دبوچ}}} کے خط سے دکھایا گیا ہے۔ماسفیٹ ایمپلیفائر اس وقت تک خوش اسلوبی سے داخلی اشارے کو بڑھاتا ہے جب تک ماسفیٹ افزائندہ خطے میں رہے۔ہم یہاں \تحریر{nMOSFET} کو مثال بنا کر ماسفیٹ ایمپلیفائر پر تبصرہ کریں گے۔ماسفیٹ کے بقایا تمام اقسام پر مبنی ایمپلیفائر بھی اسی طرح کام کرتے ہیں۔
+ماسفیٹ کو بطور ایمپلیفائر استعمال کر نے کی خاطر اسے افزائندہ خطے میں مائل کیا جاتا ہے۔شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_ترسیمی_تجزیہ} میں ماسفیٹ ایمپلیفائر دکھایا گیا ہے۔ساتھ ہی ماسفیٹ کے خطوط اور برقی خطِ بوجھ بھی دکھایا گیا ہے۔افزائندہ خطے کے حد کو \عددی{v_{DS\text{دبوچ}}} کے خط سے دکھایا گیا ہے۔ماسفیٹ ایمپلیفائر اس وقت تک خوش اسلوبی سے داخلی اشارے کو بڑھاتا ہے جب تک ماسفیٹ افزائندہ خطے میں رہے۔ہم یہاں \تحریر{nMOSFET} کو مثال بنا کر ماسفیٹ ایمپلیفائر پر تبصرہ کریں گے۔ماسفیٹ کے بقایا تمام اقسام پر مبنی ایمپلیفائر بھی اسی طرح کام کرتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{nEnhancementGraphicalA}
@@ -1299,7 +1299,7 @@ r_o=\left. \frac{\partial i_{DS}}{\partial v_{DS}} \right |_{v_{GS}}^{-1} \appro
 \end{align}
 ہم \عددی{V_A} کو \اصطلاح {ارلی برقی دباو} ہی کہیں گے۔\اصطلاح {ارلی برقی دباو} کی قیمت پیدا کردہ راہ کے لمبائی کے  راست تناسب ہوتا ہے۔
 \begin{align}
-V_A \propto L_{\textrm{راہ}}
+V_A \propto L_{\text{راہ}}
 \end{align}
 یوں \عددی{r_o} بڑھانے کی خاطر زیادہ لمبائی کی راہ تخلیق دی جاتی ہے۔ماسفیٹ کے ارلی برقی دباو کی عمومی قیمت \عددی{\SI{200}{\volt}} تا \عددی{\SI{300}{\volt}} ہوتی ہے۔
 
@@ -1387,7 +1387,7 @@ i_d&=i_s=i_{ds}=g_m v_{gs}
 \end{gather}
 پائے جاتے ہیں جہاں \عددیء{i_d} اور \عددیء{i_s} ڈرین اور سورس کے برقی رو ہیں۔داخلی مزاحمت لامحدود ہے۔آئیں اب ٹی ریاضی نمونے پر نظر ڈالیں۔ٹی ریاضی نمونے میں \عددیء{i_d=g_m v_{gs}} ہے۔گیٹ اور سورس کے مابین مزاحمت نسب ہے جس پر برقی دباو \عددیء{v_{gs}} ہے۔یوں اُوہم کے قانون سے اس مزاحمت میں برقی رو کی مقدار
 \begin{align*}
-\frac{\textrm{دباو برقی}}{\textrm{رو برقی}}=\frac{v_{gs}}{\frac{1}{g_m}}=g_m v_{gs}
+\frac{\text{\RL{برقی دباو}}}{\text{\RL{برقی رو}}}=\frac{v_{gs}}{\frac{1}{g_m}}=g_m v_{gs}
 \end{align*} 
 ہو گی۔یہی برقی رو سورس پر ہو گی۔گیٹ \عددیء{G} کے جوڑ پر \عددیء{D} کی جانب سے \عددیء{g_m v_{gs}} برقی رو آتی ہے۔اس جوڑ سے اتنی ہی برقی رو مزاحمت سے گزرتے ہوئے \عددیء{S} رواں ہے۔یوں کرخوف کے قانون برائے برقی رو کی مدد سے گیٹ  پر برقی رو \عددیء{i_g=0} حاصل ہوتی ہے۔داخلی مزاحمت \عددیء{\tfrac{v_{gs}}{i_g}} کی قیمت \عددیء{i_g=0} کی بنا پر لامحدود حاصل ہوتی ہے۔ہم دیکھتے ہیں کہ ٹی ریاضی نمونے سے بھی بالکل وہی جوابات حاصل ہوتے ہیں جو پائے ریاضی نمونے سے حاصل ہوتے ہیں لہٰذا ماسفیٹ کے ادوار حل کرتے وقت ٹی ریاضی نمونے کو بھی استعمال کیا جا سکتا ہے۔ٹی ریاضی نمونے میں \عددیء{r_o} کی شمولیت شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} ب میں دکھایا گیا ہے۔ 
 
@@ -1410,7 +1410,7 @@ i_d&=i_s=i_{ds}=g_m v_{gs}
 
 حل:دگنی تعدد کا حصہ \عددی{\tfrac{k_n V_p^2}{4} \cos (2 \omega t)} ہے۔یوں
 \begin{align*}
-\frac{\textrm{بگڑا جزو}}{\textrm{اصل جزو}}=\frac{V_p}{4 \left(V_{GS}-V_t \right)}
+\frac{\text{\RL{بگڑا جزو}}}{\text{\RL{اصل جزو}}}=\frac{V_p}{4 \left(V_{GS}-V_t \right)}
 \end{align*}
 حاصل ہوتا ہے۔اس طرح
 \begin{align*}
@@ -1627,7 +1627,7 @@ A_v=\frac{v_o}{v_i}=-\left(\frac{R_D}{\frac{1}{g_m}+R_S} \right)
 \end{align}
 حاصل ہوتا ہے۔اس مساوات کو یوں بہتر طرز پر لکھا جا سکتا ہے
 \begin{align}\label{مساوات_ماسفیٹ_افزائش_بطور_مزاحت_کی_شرح}
-A_v=-\frac{\sum R_{\textrm{ڈرین}}}{\sum R_{\textrm{سورس}}}
+A_v=-\frac{\sum R_{\text{ڈرین}}}{\sum R_{\text{سورس}}}
 \end{align}
 صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_ایمپلیفائر_کی_افزائش_کلکٹر _مخارج_مزاحمتوں_کی_شرح} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_ایمپلیفائر_کی_افزائش_کلکٹر _مخارج_مزاحمتوں_کی_شرح} میں \عددیء{\alpha=1} لیتے ہوئے مساوات \حوالہ{مساوات_ماسفیٹ_افزائش_بطور_مزاحت_کی_شرح} ہی حاصل ہوتا ہے۔دو جوڑ ٹرانزسٹر کی صورت میں \عددیء{\tfrac{1}{g_m}} کو \عددیء{r_e} لکھا گیا جبکہ یہاں  ہم اس کو \عددیء{\tfrac{1}{g_m}} ہی لکھیں گے۔
 \انتہا{مثال}
@@ -1682,19 +1682,19 @@ V_{tn}=-V_{tp}=V_t
 
 شکل سے \عددیء{Q_n} کے لئے \عددیء{v_{GS}=v_I} اور \عددیء{v_{DS}=v_O} لکھا جا سکتا ہے۔یوں  مساوات \حوالہ{مساوات_میدانی_غیر_افزائندہ_خطے_کی_نشاندہی} اور مساوات \حوالہ{مساوات_میدانی_غیر_افزائندہ_رو} کو یوں لکھا جا سکتا ہے۔
 \begin{align}\label{مساوات_ماسفیٹ_نفی_کار_کے_ماسفیٹ_مساوات_الف}
-i_{DS}=k_n \left[\left(v_{I}-V_{tn} \right )v_{O}-\frac{v_{O}^{2}}{2} \right ] \hspace{5mm} \textrm{جب}  \hspace{1.5mm} v_O \le v_I-V_{tn}
+i_{DS}=k_n \left[\left(v_{I}-V_{tn} \right )v_{O}-\frac{v_{O}^{2}}{2} \right ] \hspace{5mm} \text{جب}  \hspace{1.5mm} v_O \le v_I-V_{tn}
 \end{align}
 اسی طرح مساوات \حوالہ{مساوات_میدانی_افزائندہ_خطے_کی_نشاندہی} اور مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو} کو
 \begin{align}\label{مساوات_ماسفیٹ_نفی_کار_کے_ماسفیٹ_مساوات_ب}
-i_{DS}=\frac{k_n}{2} \left[v_{I}-V_{tn} \right]^{2}  \hspace{5mm} \textrm{جب}  \hspace{1.5mm} v_O \ge v_I-V_{tn}
+i_{DS}=\frac{k_n}{2} \left[v_{I}-V_{tn} \right]^{2}  \hspace{5mm} \text{جب}  \hspace{1.5mm} v_O \ge v_I-V_{tn}
 \end{align}
 لکھا جا سکتا ہے۔اسی طرح \عددیء{Q_p} کے لئے مساوات \حوالہ{مساوات_ماسفیٹ_جمع_غیر_افزائندہ_حدود_و_مساوات} کو 
 \begin{align}\label{مساوات_ماسفیٹ_نفی_کار_کے_ماسفیٹ_مساوات_پ}
-i_{SD}&=k_p \left[\left(V_{DD}-v_I+V_{tp} \right )\left(V_{DD}-v_O\right)-\frac{\left(V_{DD}-v_O \right)^{2}}{2} \right ] \hspace{5mm} \textrm{جب}  \hspace{1.5mm} v_O \ge v_I-V_{tp}
+i_{SD}&=k_p \left[\left(V_{DD}-v_I+V_{tp} \right )\left(V_{DD}-v_O\right)-\frac{\left(V_{DD}-v_O \right)^{2}}{2} \right ] \hspace{5mm} \text{جب}  \hspace{1.5mm} v_O \ge v_I-V_{tp}
 \end{align}
 اور مساوات \حوالہ{مساوات_ماسفیٹ_منفی_ماسفیٹ_افزائنہ_صورت_مثبت_متغیرات} کو
 \begin{align}\label{مساوات_ماسفیٹ_نفی_کار_کے_ماسفیٹ_مساوات_ت}
-i_{SD}&=\frac{k_p}{2} \left[V_{DD}-v_I+V_{tp} \right]^{2} \hspace{5mm} \textrm{جب}  \hspace{1.5mm} v_O \le v_I-V_{tp}
+i_{SD}&=\frac{k_p}{2} \left[V_{DD}-v_I+V_{tp} \right]^{2} \hspace{5mm} \text{جب}  \hspace{1.5mm} v_O \le v_I-V_{tp}
 \end{align}
 لکھا جا سکتا ہے۔نفی کار کو عموماً یوں تخلیق دیا جاتا ہے کہ
 \begin{align}\label{مساوات_ماسفیٹ_نفی_کار_متشاکل_ہونے_کے_شرط}
@@ -1954,7 +1954,7 @@ v_{gs}&=v_i
 شکل \حوالہ{شکل_جوڑدار_منفی_فیٹ_مثال} اور \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_الف} میں مزاحمت استعمال کرتے ہوئے انفرادی ماسفیٹ کا نقطہ کارکردگی  تعین کیا گیا۔مخلوط ادوار میں ماسفیٹ کا نقطہ کارکردگی مزاحمت استعمال کرتے ہوئے تعین نہیں کیا جاتا۔مخلوط دور بناتے وقت سلیکان پتری کے کم سے کم رقبے پر زیادہ سے زیادہ پرزے بنائے جاتے ہیں۔یوں مخلوط دور میں ان پرزوں کو ترجیح دی جاتی ہے جو کم سے کم رقبہ گھیریں۔ماسفیٹ کی نسبت سے مزاحمت زیادہ رقبہ گھیرتا ہے لہٰذا مزاحمت کے استعمال سے بچنے کی ہر ممکنہ  کوشش کی جاتی ہے۔مزید یہ کہ سلیکان پر بالکل درست قیمت کا مزاحمت بنانے کی خاطر اضافی گراں قیمت اقدام کرنے پڑتے ہیں جبکہ درکار خوبیوں کا ماسفیٹ آسانی سے  بنتا ہے۔اس کے علاوہ انفرادی ماسفیٹ ایمپلیفائر میں \اصطلاح {جفتی} اور \اصطلاح {متبادل راستہ} کپیسٹر استعمال کئے جاتے ہیں۔مخلوط دور میں چند \عددی{\si{\pico \farad}} سے زیادہ قیمت کا کپیسٹر بنانا ممکن نہیں ہوتا لہٰذا کپیسٹر کا استعمال بھی ممکن نہیں ہوتا۔آئیں دیکھیں کہ مخلوط دور میں ماسفیٹ کا نقطہ کارکردگی کیسے تعین کیا جاتا ہے۔
   
 \جزوحصہ{منبع مستقل برقی رو}
-شکل \حوالہ{شکل_ماسفیٹ_پیداکار_مستقل_برقی_رو} الف میں \اصطلاح {منبع مستقل برقی رو}\فرہنگ{منبع مستقل برقی رو}\حاشیہب{constant current source}\فرہنگ{constant current source} کا سادہ دور اور شکل  ب میں اس کی علامت دکھائے گئے ہیں۔مثال \حوالہ{مثال_میدانی_گیٹ_اور_محاصل_جڑے} کی طرح \عددی{Q_1} اور \عددی{R_{\textrm{حوالہ}}} کے دور کو حل کرنے سے برقی رو \عددی{I_{DS1}} اور برقی دباو \عددی{V_{DS1}=V_{GS1}} حاصل ہوں گے۔\عددی{Q_1} اور \عددی{Q_2} کے سورس آپس میں جڑے ہیں اور اسی طرح ان کے گیٹ بھی آپس میں جڑے ہیں لہٰذا ان دونوں کے \عددی{V_{GS}} برابر ہوں گے یعنی
+شکل \حوالہ{شکل_ماسفیٹ_پیداکار_مستقل_برقی_رو} الف میں \اصطلاح {منبع مستقل برقی رو}\فرہنگ{منبع مستقل برقی رو}\حاشیہب{constant current source}\فرہنگ{constant current source} کا سادہ دور اور شکل  ب میں اس کی علامت دکھائے گئے ہیں۔مثال \حوالہ{مثال_میدانی_گیٹ_اور_محاصل_جڑے} کی طرح \عددی{Q_1} اور \عددی{R_{\text{حوالہ}}} کے دور کو حل کرنے سے برقی رو \عددی{I_{DS1}} اور برقی دباو \عددی{V_{DS1}=V_{GS1}} حاصل ہوں گے۔\عددی{Q_1} اور \عددی{Q_2} کے سورس آپس میں جڑے ہیں اور اسی طرح ان کے گیٹ بھی آپس میں جڑے ہیں لہٰذا ان دونوں کے \عددی{V_{GS}} برابر ہوں گے یعنی
 \begin{align*}
 V_{GS1}=V_{GS2}=V_{GS}
 \end{align*}
@@ -1962,25 +1962,25 @@ V_{GS1}=V_{GS2}=V_{GS}
 \begin{align}\label{مساوات_ماسفیٹ_مستقل_برقی_رو_الف}
 I_{DS1}=\frac{k_n'}{2} \left(\frac{W}{L}\right)_1 \left(V_{GS}-V_t \right)^2
 \end{align}
-ہو گا۔گیٹ پر برقی رو صفر ہونے سے \عددی{I_{DS1}} اور \عددی{I_{\textrm{حوالہ}}} برابر ہوں گے۔یوں اُوہم کے قانون سے
+ہو گا۔گیٹ پر برقی رو صفر ہونے سے \عددی{I_{DS1}} اور \عددی{I_{\text{حوالہ}}} برابر ہوں گے۔یوں اُوہم کے قانون سے
 \begin{align}\label{مساوات_ماسفیٹ_مستقل_برقی_رو_ب}
-I_{DS1}=I_{\textrm{حوالہ}}=\frac{V_{DD}-V_{GS1}}{R_{\textrm{حوالہ}}}
+I_{DS1}=I_{\text{حوالہ}}=\frac{V_{DD}-V_{GS1}}{R_{\text{حوالہ}}}
 \end{align}
-لکھا جا سکتا ہے۔درکار \عددی{I_{DS1}} کے لئے دور میں مزاحمت \عددی{R_{\textrm{حوالہ}}} کی قیمت مندرجہ بالا دو مساوات حل کر کے  حاصل کی جاتی ہے۔
+لکھا جا سکتا ہے۔درکار \عددی{I_{DS1}} کے لئے دور میں مزاحمت \عددی{R_{\text{حوالہ}}} کی قیمت مندرجہ بالا دو مساوات حل کر کے  حاصل کی جاتی ہے۔
 
 اگر ہم تصور کریں گے کہ \عددی{Q_2} بھی افزائندہ خطے میں ہے تب اس کے لئے ہم لکھ سکتے ہیں
 \begin{align}
-I_{DS2}=I_{\textrm{عکس}}=\frac{k_n'}{2} \left(\frac{W}{L}\right)_2 \left(V_{GS}-V_t \right)^2
+I_{DS2}=I_{\text{عکس}}=\frac{k_n'}{2} \left(\frac{W}{L}\right)_2 \left(V_{GS}-V_t \right)^2
 \end{align} 
 جہاں \عددی{V_{GS1}=V_{GS2}=V_{GS}} کے برابر ہے۔\عددی{I_{DS2}} کو \عددی{I_{DS1}} سے تقسیم کرتے ہوئے ملتا ہے
 \begin{align}
-\frac{I_{DS2}}{I_{DS1}}=\frac{I_{\textrm{عکس}}}{I_{\textrm{حوالہ}}}=\frac{\left(\frac{W}{L} \right)_2}{\left(\frac{W}{L} \right)_1}
+\frac{I_{DS2}}{I_{DS1}}=\frac{I_{\text{عکس}}}{I_{\text{حوالہ}}}=\frac{\left(\frac{W}{L} \right)_2}{\left(\frac{W}{L} \right)_1}
 \end{align}
 آپ دیکھ سکتے ہیں کہ \عددی{I_{DS2}} کی قیمت کا دارومدار \عددی{I_{DS1}} کے قیمت کے حوالے سے ہے۔اگر دونوں ماسفیٹ بالکل ایک ہی جسامت کے ہوں تب
 \begin{align}
-I_{\textrm{عکس}}=I_{\textrm{حوالہ}}
+I_{\text{عکس}}=I_{\text{حوالہ}}
 \end{align}
-حاصل ہوتا ہے۔ایسا معلوم ہوتا ہے جیسے \عددی{I_{\textrm{عکس}}} بالکل \عددی{I_{\textrm{حوالہ}}} کا عکس ہے۔اسی سے اس دور کا دوسرا نام \اصطلاح {آئینہ برقی رو}\فرہنگ{آئینہ برقی رو}\حاشیہب{current mirror}\فرہنگ{current mirror} نکلا ہے۔دونوں برقی رو برابر نہ ہونے کی صورت میں بھی اس دور کو اسی نام سے پکارا جاتا ہے۔
+حاصل ہوتا ہے۔ایسا معلوم ہوتا ہے جیسے \عددی{I_{\text{عکس}}} بالکل \عددی{I_{\text{حوالہ}}} کا عکس ہے۔اسی سے اس دور کا دوسرا نام \اصطلاح {آئینہ برقی رو}\فرہنگ{آئینہ برقی رو}\حاشیہب{current mirror}\فرہنگ{current mirror} نکلا ہے۔دونوں برقی رو برابر نہ ہونے کی صورت میں بھی اس دور کو اسی نام سے پکارا جاتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{nMosfetConstantCurrentSource}
@@ -1988,9 +1988,9 @@ I_{\textrm{عکس}}=I_{\textrm{حوالہ}}
 \label{شکل_ماسفیٹ_پیداکار_مستقل_برقی_رو}
 \end{figure}
 
-\اصطلاح {منبع مستقل برقی رو} میں مزاحمت \عددی{R_{\textrm{حوالہ}}} کی مدد سے درکار برقی رو حاصل کیا جاتا ہے۔اس مزاحمت کو تبدیل کرنے سے \عددی{V_{GS1}} اور \عددی{V_{GS2}} تبدیل ہوتے ہیں۔آپ دیکھ سکتے ہیں کہ \عددی{Q_2}  کو \عددی{Q_1} قابو کرتا ہے۔یوں \عددی{Q_2} تابع ماسفیٹ ہے۔مخلوط دور میں دونوں ماسفیٹ کے \عددی{k_n'} اور \عددی{V_t} یکساں ہوتے ہیں۔یوں \عددی{\left(\frac{W}{L} \right)_2} اور \عددی{\left(\frac{W}{L} \right)_1} کی شرح سے  \عددی{I_{\textrm{عکس}}} اور \عددی{I_{\textrm{حوالہ}}} کی شرح تعین ہوتی ہے۔
+\اصطلاح {منبع مستقل برقی رو} میں مزاحمت \عددی{R_{\text{حوالہ}}} کی مدد سے درکار برقی رو حاصل کیا جاتا ہے۔اس مزاحمت کو تبدیل کرنے سے \عددی{V_{GS1}} اور \عددی{V_{GS2}} تبدیل ہوتے ہیں۔آپ دیکھ سکتے ہیں کہ \عددی{Q_2}  کو \عددی{Q_1} قابو کرتا ہے۔یوں \عددی{Q_2} تابع ماسفیٹ ہے۔مخلوط دور میں دونوں ماسفیٹ کے \عددی{k_n'} اور \عددی{V_t} یکساں ہوتے ہیں۔یوں \عددی{\left(\frac{W}{L} \right)_2} اور \عددی{\left(\frac{W}{L} \right)_1} کی شرح سے  \عددی{I_{\text{عکس}}} اور \عددی{I_{\text{حوالہ}}} کی شرح تعین ہوتی ہے۔
 
-مندرجہ بالا تبصرے میں \اصطلاح {ارلی برقی دباو} کے اثر کو نظرانداز کرتے ہوئے تصور کیا گیا کہ دو ماسفیٹ کے \عددی{V_{GS}} برابر ہونے کی صورت میں ان کے \عددی{I_{DS}} بھی برابر ہوتے ہیں۔حقیقت میں ایسا نہیں ہوتا اور دو ماسفیٹ جن کے \عددی{V_{GS}} برابر ہوں کے برقی رو صرف اور صرف اسی وقت برابر ہوتے ہیں جب ان کے \عددی{V_{DS}} بھی برابر ہوں۔شکل \حوالہ{شکل_ماسفیٹ_بار_کا_خط} میں ماسفیٹ \عددی{Q_2} کے خط دکھائے گئے ہیں۔\عددی{V_{GS2}} کی قیمت \عددی{V_{GS1}} کے برابر ہے جو قطعی مقدار ہے لہٰذا ان تمام خطوط میں صرف ایک ہی خط کارآمد ہے۔اس خط کو موٹا کر کے دکھایا گیا ہے۔آپ دیکھ سکتے ہیں کہ \عددی{V_{GS}} تبدیل کئے بغیر \عددی{V_{DS}} کے بڑھانے سے \عددی{I_{DS}} بڑھتی ہے۔\عددی{V_{DS2}} کے تبدیلی سے \عددی{I_{\textrm{عکس}}} میں تبدیلی کو ماسفیٹ کے خارجی مزاحمت \عددی{r_o} کی مدد سے حاصل کیا جا سکتا ہے۔
+مندرجہ بالا تبصرے میں \اصطلاح {ارلی برقی دباو} کے اثر کو نظرانداز کرتے ہوئے تصور کیا گیا کہ دو ماسفیٹ کے \عددی{V_{GS}} برابر ہونے کی صورت میں ان کے \عددی{I_{DS}} بھی برابر ہوتے ہیں۔حقیقت میں ایسا نہیں ہوتا اور دو ماسفیٹ جن کے \عددی{V_{GS}} برابر ہوں کے برقی رو صرف اور صرف اسی وقت برابر ہوتے ہیں جب ان کے \عددی{V_{DS}} بھی برابر ہوں۔شکل \حوالہ{شکل_ماسفیٹ_بار_کا_خط} میں ماسفیٹ \عددی{Q_2} کے خط دکھائے گئے ہیں۔\عددی{V_{GS2}} کی قیمت \عددی{V_{GS1}} کے برابر ہے جو قطعی مقدار ہے لہٰذا ان تمام خطوط میں صرف ایک ہی خط کارآمد ہے۔اس خط کو موٹا کر کے دکھایا گیا ہے۔آپ دیکھ سکتے ہیں کہ \عددی{V_{GS}} تبدیل کئے بغیر \عددی{V_{DS}} کے بڑھانے سے \عددی{I_{DS}} بڑھتی ہے۔\عددی{V_{DS2}} کے تبدیلی سے \عددی{I_{\text{عکس}}} میں تبدیلی کو ماسفیٹ کے خارجی مزاحمت \عددی{r_o} کی مدد سے حاصل کیا جا سکتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{nMosfetCurrentMirrorAsLoad}
@@ -2005,20 +2005,20 @@ I_{\textrm{عکس}}=I_{\textrm{حوالہ}}
 \label{شکل_ماسفیٹ_آئینہ_برقی_رو}
 \end{figure}
 
-شکل \حوالہ{شکل_ماسفیٹ_آئینہ_برقی_رو} الف میں \عددی{R_{\textrm{حوالہ}}} کی جگہ دوسرا \اصطلاح {منبع مستقل برقی رو} کا استعمال کیا گیا ہے۔\عددیء{Q_1} میں \عددیء{I_{\textrm{حوالہ}}} برقی رو پائی جاتی ہے۔افزائندہ ماسفیٹ کی مساوات سے  \عددیء{Q_1} کی \عددیء{V_{GS}} حاصل کی جا سکتی ہے جو \عددیء{Q_2} پر بھی لاگو ہے۔یوں آپ دیکھ سکتے ہیں کہ اس صورت میں بھی
+شکل \حوالہ{شکل_ماسفیٹ_آئینہ_برقی_رو} الف میں \عددی{R_{\text{حوالہ}}} کی جگہ دوسرا \اصطلاح {منبع مستقل برقی رو} کا استعمال کیا گیا ہے۔\عددیء{Q_1} میں \عددیء{I_{\text{حوالہ}}} برقی رو پائی جاتی ہے۔افزائندہ ماسفیٹ کی مساوات سے  \عددیء{Q_1} کی \عددیء{V_{GS}} حاصل کی جا سکتی ہے جو \عددیء{Q_2} پر بھی لاگو ہے۔یوں آپ دیکھ سکتے ہیں کہ اس صورت میں بھی
 \begin{align*}
-I_{\textrm{عکس}}=I_{\textrm{حوالہ}}
+I_{\text{عکس}}=I_{\text{حوالہ}}
 \end{align*}
-ہو گا۔اس شکل میں مثبت برقی منبع کو \عددی{V_{+}} اور منفی کو \عددی{V_{-}} لکھا گیا ہے۔شکل  ب میں \تحریر{pMOSFET} استعمال کرتے ہوئے \اصطلاح {آئینہ برقی رو} بنایا گیا ہے جس کی کارکردگی بالکل \تحریر{nMOSFET} سے بنائے گئے \اصطلاح {آئینہ برقی رو} کی طرح ہے۔فرق صرف اتنا ہے کہ \تحریر{nMOSFET} میں \عددی{I_{\textrm{عکس}}} کی سمت \اصطلاح {آئینہ} کے جانب ہے جبکہ \تحریر{pMOSFET} \اصطلاح {آئینہ} میں \عددی{I_{\textrm{عکس}}} کی سمت \اصطلاح {آئینہ}  سے باہر کو ہے۔    
+ہو گا۔اس شکل میں مثبت برقی منبع کو \عددی{V_{+}} اور منفی کو \عددی{V_{-}} لکھا گیا ہے۔شکل  ب میں \تحریر{pMOSFET} استعمال کرتے ہوئے \اصطلاح {آئینہ برقی رو} بنایا گیا ہے جس کی کارکردگی بالکل \تحریر{nMOSFET} سے بنائے گئے \اصطلاح {آئینہ برقی رو} کی طرح ہے۔فرق صرف اتنا ہے کہ \تحریر{nMOSFET} میں \عددی{I_{\text{عکس}}} کی سمت \اصطلاح {آئینہ} کے جانب ہے جبکہ \تحریر{pMOSFET} \اصطلاح {آئینہ} میں \عددی{I_{\text{عکس}}} کی سمت \اصطلاح {آئینہ}  سے باہر کو ہے۔    
 %==================
 \ابتدا{مثال}
 \اصطلاح {منبع مستقل برقی رو} میں
 \begin{align*}
 V_{DD}=\SI{15}{\volt}, \hspace{5mm} k_n=\SI[per=frac,fraction=nice]{0.12}{\milli \ampere \per \volt \squared}, \hspace{5mm} V_t=\SI{2.1}{\volt}
 \end{align*}
-ہیں۔\عددی{I_{\textrm{عکس}}=\SI{2}{\milli \ampere}} حاصل کرنے کے لئے درکار \عددی{R_{\textrm{حوالہ}}} حاصل کریں۔
+ہیں۔\عددی{I_{\text{عکس}}=\SI{2}{\milli \ampere}} حاصل کرنے کے لئے درکار \عددی{R_{\text{حوالہ}}} حاصل کریں۔
 
-حل:\عددی{I_{\textrm{عکس}}=I_{\textrm{حوالہ}}} لیتے ہوئے مساوات \حوالہ{مساوات_ماسفیٹ_مستقل_برقی_رو_الف}
+حل:\عددی{I_{\text{عکس}}=I_{\text{حوالہ}}} لیتے ہوئے مساوات \حوالہ{مساوات_ماسفیٹ_مستقل_برقی_رو_الف}
 \begin{align*}
 2 \times 10^{-3}=\frac{0.12 \times 10^{-3}}{2} \left(V_{GS1}-2.1 \right)^2
 \end{align*}
@@ -2028,14 +2028,14 @@ V_{GS1}=\SI{7.8735}{\volt}, \hspace{3mm} \SI{-3.67}{\volt}
 \end{align*}
  حاصل ہوتے ہیں۔منفی جواب کو رد کیا جاتا ہے چونکہ یہ \عددی{V_t} سے کم ہے جس سے ماسفیٹ منقطع حالت میں ہو گا۔مثبت جواب کو لیتے ہوئے مساوات \حوالہ{مساوات_ماسفیٹ_مستقل_برقی_رو_الف} کو استعمال کرتے ہوئے
 \begin{align*}
-2 \times 10^{-3}=\frac{15-7.8735}{R_{\textrm{حوالہ}}}
+2 \times 10^{-3}=\frac{15-7.8735}{R_{\text{حوالہ}}}
 \end{align*}
-سے \عددی{R_{\textrm{حوالہ}}=\SI{5.66}{\kilo \ohm}} حاصل ہوتا ہے۔
+سے \عددی{R_{\text{حوالہ}}=\SI{5.66}{\kilo \ohm}} حاصل ہوتا ہے۔
 \انتہا{مثال}
 
 %====================
 \ابتدا{مثال}\شناخت{مثال_ماسفیٹ_مستقل_برقی_رو_الف}
-شکل \حوالہ{شکل_ماسفیٹ_پیداکار_مستقل_برقی_رو_استعمال} میں دونوں ماسفیٹ کے \عددیء{k_n=\SI{0.2}{\milli \ampere \per \volt \squared}} اور \عددیء{V_t=\SI{1.7}{\volt}} ہیں۔مزید یہ کہ \عددی{R_{\textrm{حوالہ}}=\SI{6.8}{\kilo \ohm}} اور \عددی{R_{\textrm{بوجھ} }=\SI{4.7}{\kilo \ohm}} ہیں۔\عددی{I_{\textrm{عکس}}} اور \عددی{V_O} حاصل کریں۔
+شکل \حوالہ{شکل_ماسفیٹ_پیداکار_مستقل_برقی_رو_استعمال} میں دونوں ماسفیٹ کے \عددیء{k_n=\SI{0.2}{\milli \ampere \per \volt \squared}} اور \عددیء{V_t=\SI{1.7}{\volt}} ہیں۔مزید یہ کہ \عددی{R_{\text{حوالہ}}=\SI{6.8}{\kilo \ohm}} اور \عددی{R_{\text{بوجھ} }=\SI{4.7}{\kilo \ohm}} ہیں۔\عددی{I_{\text{عکس}}} اور \عددی{V_O} حاصل کریں۔
 
 \begin{figure}
 \centering
@@ -2059,11 +2059,11 @@ I_{DS1}&=\frac{0.2 \times 10^{-3}}{2} \left(4.926-1.7 \right)^2=\SI{1.04}{\milli
 \end{align*}
 چونکہ یہ \اصطلاح {آئینہ برقی رو} ہے لہٰذا
 \begin{align*}
-I_{\textrm{عکس}}=I_{\textrm{حوالہ}}=\SI{1.04}{\milli \ampere}
+I_{\text{عکس}}=I_{\text{حوالہ}}=\SI{1.04}{\milli \ampere}
 \end{align*}
 ہو گا۔\عددی{Q_2} کے ڈرین پر
 \begin{align*}
-V_O=V_{DS2}&=17-I_{DS2} R_{\textrm{بوجھ} }\\
+V_O=V_{DS2}&=17-I_{DS2} R_{\text{بوجھ} }\\
 &=17- 1.04 \times 10^{-3} \times 4700\\
 &=\SI{12.1}{\volt}
 \end{align*}
@@ -2075,24 +2075,24 @@ V_{GD2}=V_{GS2}-V_{DS2}=4.925-12.1=\SI{-7.1}{\volt}
 \انتہا{مثال}
 %===============
 \ابتدا{مثال}
-مندرجہ بالا مثال میں \عددی{R_{\textrm{بوجھ} }} کی وہ قیمت حاصل کریں جس پر \عددی{Q_2} افزائندہ خطے سے نکل آئے گا۔
+مندرجہ بالا مثال میں \عددی{R_{\text{بوجھ} }} کی وہ قیمت حاصل کریں جس پر \عددی{Q_2} افزائندہ خطے سے نکل آئے گا۔
 
 حل:\عددی{Q_2} اس وقت تک افزائندہ رہے گا جب تک \عددی{V_{GD2} < Vt} ہو۔چونکہ \عددی{V_{GS2}=V_{GS1}=\SI{4.925}{\volt}} ہی رہے گا جبکہ
 \begin{align*}
-V_{DS2}&=17-I_{DS2} R_{\textrm{بوجھ} }\\
-&=17-1.04 \times 10^{-3} \times R_{\textrm{بوجھ} }
+V_{DS2}&=17-I_{DS2} R_{\text{بوجھ} }\\
+&=17-1.04 \times 10^{-3} \times R_{\text{بوجھ} }
 \end{align*}
 کے برابر ہے۔یوں \عددی{Q_2} اس وقت افزائندہ خطے سے باہر نکلے گا جب 
 \begin{align*}
 V_{GD2}&=V_{GS2}-V_{DS2}> V_t\\
-&=4.925-\left(17-1.04 \times 10^{-3} \times R_{\textrm{بوجھ} } \right) > 1.7
+&=4.925-\left(17-1.04 \times 10^{-3} \times R_{\text{بوجھ} } \right) > 1.7
 \end{align*} 
-ہو گا۔یوں  تقریباً \عددی{R_{\textrm{بوجھ} }> \SI{13.24}{\kilo \ohm}} حاصل ہوتا ہے۔مثال کے طور پر اگر بوجھ کی مزاحمت \عددی{\SI{15}{\kilo \ohm}}
+ہو گا۔یوں  تقریباً \عددی{R_{\text{بوجھ} }> \SI{13.24}{\kilo \ohm}} حاصل ہوتا ہے۔مثال کے طور پر اگر بوجھ کی مزاحمت \عددی{\SI{15}{\kilo \ohm}}
 کر دیا جائے تب \عددی{V_{DS2}=\SI{1.4}{\volt}} اور \عددی{V_{GD2}=\SI{3.5}{\volt}} حاصل ہوتا ہے جو کہ \عددی{V_t} سے زیادہ ہے یعنی ماسفیٹ افزائندہ خطے میں نہیں ہے۔
 \انتہا{مثال}
 %===========================
 \ابتدا{مثال}
-مثال \حوالہ{مثال_ماسفیٹ_مستقل_برقی_رو_الف} میں \عددیء{V_{DS1}=\SI{4.926}{\volt}}، \عددیء{V_{DS2}=\SI{12.1}{\volt}} اور \عددی{I_{\textrm{عکس}}=\SI{1.04}{\milli \ampere}} حاصل ہوئے۔ \عددی{V_A=\SI{50}{\volt}} کی صورت میں \عددی{I_{\textrm{عکس}}} حاصل کردہ قیمت سے کتنا انحراف کرے گا۔
+مثال \حوالہ{مثال_ماسفیٹ_مستقل_برقی_رو_الف} میں \عددیء{V_{DS1}=\SI{4.926}{\volt}}، \عددیء{V_{DS2}=\SI{12.1}{\volt}} اور \عددی{I_{\text{عکس}}=\SI{1.04}{\milli \ampere}} حاصل ہوئے۔ \عددی{V_A=\SI{50}{\volt}} کی صورت میں \عددی{I_{\text{عکس}}} حاصل کردہ قیمت سے کتنا انحراف کرے گا۔
 
 حل: ماسفیٹ کا خارجی مزاحمت تقریباً
 \begin{align*}
@@ -2112,7 +2112,7 @@ r_o=\frac{\Delta V_{DS}}{\Delta I_{DS}}
 \end{align*}
 ہو گا۔یوں
 \begin{align*}
- I_{\textrm{حوالہ}}=\SI{1.04}{\milli \ampere}+\SI{149}{\micro \ampere}=\SI{1.189}{\milli \ampere}
+ I_{\text{حوالہ}}=\SI{1.04}{\milli \ampere}+\SI{149}{\micro \ampere}=\SI{1.189}{\milli \ampere}
 \end{align*}
 ہو گا۔
 \انتہا{مثال}
@@ -2363,7 +2363,7 @@ R_i=\frac{r_o+R_d}{\mu+1}
 ایک سے زیادہ ایمپلیفائر کو زنجیر کی شکل میں جوڑ کر زیادہ سے زیادہ افزائش حاصل کرنا ممکن ہوتا ہے۔ایسے زنجیری ایمپلیفائر میں عموماً داخلی جانب پہلی کڑی،  درکار داخلی مزاحمت فراہم کرنے کی غرض سے تخلیق دیا جاتا ہے جبکہ آخری کڑی کو درکار خارجی مزاحمت کے لئے تخلیق دیا جاتا ہے۔درمیانی کڑیاں درکار افزائش حاصل کرنے کے لئے تخلیق دیں جاتی ہیں۔
  
 \ابتدا{مثال}\شناخت{مثال_ماسفیٹ_دو_کڑی_زنجیر}
-شکل \حوالہ{شکل_ماسفیٹ_دو_کڑی_زنجیری_الف} میں دو بالکل یکساں ماسفیٹ استعمال کرتے ہوئے، پہلی کڑی سورس مشترک اور دوسری کڑی ڈرین مشترک ایمپلیفائر سے تخلیق دی گئی ہے۔\عددی{k_n=\SI{0.6}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1}{\volt}} ہیں۔\عددی{I_{DS1}=\SI{0.12}{\milli \ampere}}، \عددی{I_{DS2}=\SI{1.2}{\milli \ampere}} اور \عددی{V_{DS1}=V_{DS2}=\SI{5}{\volt}} حاصل کرنے کے لئے درکار \عددی{R_{D1}}، \عددی{R_{S1}} اور \عددی{R_{S2}} حاصل کریں۔\عددی{R_{\textrm{داخلی}}=\SI{150}{\kilo \ohm}} حاصل کرنے کے لئے درکار \عددی{R_1} اور \عددی{R_2} حاصل کریں۔تمام کپیسٹروں کی قیمت لامحدود تصور کریں۔
+شکل \حوالہ{شکل_ماسفیٹ_دو_کڑی_زنجیری_الف} میں دو بالکل یکساں ماسفیٹ استعمال کرتے ہوئے، پہلی کڑی سورس مشترک اور دوسری کڑی ڈرین مشترک ایمپلیفائر سے تخلیق دی گئی ہے۔\عددی{k_n=\SI{0.6}{\milli \ampere \per \volt \squared}} اور \عددی{V_t=\SI{1}{\volt}} ہیں۔\عددی{I_{DS1}=\SI{0.12}{\milli \ampere}}، \عددی{I_{DS2}=\SI{1.2}{\milli \ampere}} اور \عددی{V_{DS1}=V_{DS2}=\SI{5}{\volt}} حاصل کرنے کے لئے درکار \عددی{R_{D1}}، \عددی{R_{S1}} اور \عددی{R_{S2}} حاصل کریں۔\عددی{R_{\text{داخلی}}=\SI{150}{\kilo \ohm}} حاصل کرنے کے لئے درکار \عددی{R_1} اور \عددی{R_2} حاصل کریں۔تمام کپیسٹروں کی قیمت لامحدود تصور کریں۔
 
 \begin{figure}
 \centering
@@ -2416,7 +2416,7 @@ V_{G1}&=V_{S1}+V_{GS1}\\
 \begin{align*}
 V_{G1}=3.632=\left[\frac{9-(-5)}{R_1+R_2}\right] R_1 -5
 \end{align*}
-چونکہ \عددی{R_{\textrm{داخلی}}=R_1 \mathbin{\|} R_2} کے برابر ہے جس کی قیمت \عددی{\SI{150}{\kilo \ohm}} درکار ہے لہٰذا
+چونکہ \عددی{R_{\text{داخلی}}=R_1 \mathbin{\|} R_2} کے برابر ہے جس کی قیمت \عددی{\SI{150}{\kilo \ohm}} درکار ہے لہٰذا
 \begin{align*}
 150 \times 10^{3}&=\frac{R_1 \times R_2}{R_1+R_2}
 \end{align*}
@@ -2533,7 +2533,7 @@ A_v=\left(\frac{0.00209^2 \times 2500}{1+2 \times 0.00209 \times 2500}\right)  \
 \begin{align*}
 v_{GS} & > V_t, \hspace{2mm} v_{GD}\ge V_t\\
 i_{DS}&=k_n' \left(\frac{W}{L} \right) \left[\left(v_{GS}-V_t\right)v_{DS}-\frac{v_{DS}^2}{2} \right]\\
-\textrm{مزاحمت}&=\frac{1}{k_n'\left(\frac{W}{L}\right)\left(v_{GS}-V_t \right)} \hspace{5mm} \textrm{کم برقی دباو پر مزاحمت}
+\text{مزاحمت}&=\frac{1}{k_n'\left(\frac{W}{L}\right)\left(v_{GS}-V_t \right)} \hspace{5mm} \text{\RL{کم برقی دباو پر مزاحمت}}
 \end{align*}
 
 \جزوجزوحصہء{افزائندہ}
@@ -2549,7 +2549,7 @@ i_{DS}&=\frac{k_n'}{2} \left(\frac{W}{L} \right) \left(v_{GS}-V_t\right)^2\left(
 \begin{align*}
 v_{SG} &> -V_t, \hspace{2mm} v_{DG}\ge -V_t\\
 i_{SD}&=k_p' \left(\frac{W}{L} \right) \left[\left(v_{SG}+V_t\right)v_{SD}-\frac{v_{SD}^2}{2} \right]\\
-\textrm{مزاحمت}&=\frac{1}{k_p'\left(\frac{W}{L}\right)\left(v_{SG}+V_t \right)} \hspace{5mm} \textrm{کم برقی دباو پر مزاحمت}
+\text{مزاحمت}&=\frac{1}{k_p'\left(\frac{W}{L}\right)\left(v_{SG}+V_t \right)} \hspace{5mm} \text{\RL{کم برقی دباو پر مزاحمت}}
 \end{align*}
 
 \جزوجزوحصہء{افزائندہ}
