--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -219,7 +219,7 @@ R_o \approx \SI{0}{\ohm}
 خطی خطے  میں استعمال ہوتے ہوئے حسابی ایمپلیفائر  کی کارکردگی پر غور کرتے ہوئے کچھ حقائق سامنے آئے جنہیں مساوات \حوالہ{مساوات_حسابی_داخلی_سروں_پر_برابر_دباو}، \حوالہ{مساوات_حسابی_صفر_داخلی_رو} ،  \حوالہ{مساوات_حسابی_لامحدود_داخلی_مزاحمت} اور \حوالہ{مساوات_حسابی_صفر_خارجی_مزاحمت} میں بیان کیا گیا۔ان مساوات کو یہاں یکجا کر کے پیش کرتے ہیں۔
 \begin{gather} 
 \begin{aligned}\label{مساوات_حسابی_بنیادی_پہلو}
-v_2 &=v_1 \hspace{5mm} \textrm{خطی خطہ}\\
+v_2 &=v_1 \hspace{5mm} \text{\RL{خطی خطہ}}\\
 i&=0\\
 R_i &=\infty\\
 R_o &=0
@@ -442,7 +442,7 @@ v_o = -10 \times 0.1 \sin (t) = - \sin(t)
 
 \item
 $\begin{aligned}
-v_o = -10 \times 2 \sin(t)=\underbrace{-20 \sin(t)}_{\text{غیر خطی خطہ}}
+v_o = -10 \times 2 \sin(t)=\underbrace{-20 \sin(t)}_{\text{\RL{غیر خطی خطہ}}}
 \end{aligned}$
 \end{enumerate}
 
@@ -480,8 +480,8 @@ v_n=\frac{v_s R_2+v_o R_1}{R_1+R_2}
 
 آپ دیکھ سکتے ہیں کہ جب تک ایمپلیفائر خطی خطے میں رہے \عددی{v_n=v_k} رہتا ہے جبکہ غیر خطی خطے میں داخل ہوتے ہی \عددی{v_n \ne v_k} ہو جاتا ہے۔
 \begin{align}
-v_d &=0   \hspace{5mm} \textrm{خطی خطہ}\\
-v_d & \ne 0 \hspace{5mm} \textrm{غیر خطی خطہ}
+v_d &=0   \hspace{5mm} \text{\RL{خطی خطہ}}\\
+v_d & \ne 0 \hspace{5mm} \text{\RL{غیر خطی خطہ}}
 \end{align}
 \انتہا{مثال}
 
@@ -565,8 +565,8 @@ A_v=\frac{v_o}{v_s}=-\frac{R_2}{R_1}\left[1+\left(\frac{1}{R_2}+\frac{1}{R_3} \r
 
 حل:منفی حسابی ایمپلیفائر کی افزائش \عددی{A= -\tfrac{R_2}{R_1}} کے برابر ہے۔اس کا حتمی قیمت اس وقت کم سے کم  ہو گا جب \عددی{R_2} کی حقیقی قیمت \عددی{\SI{5}{\percent}} کم یعنی \عددی{\left(1-\epsilon \right) R_2} جبکہ \عددی{R_1} کی حقیقی قیمت \عددی{\SI{5}{\percent}} زیادہ  یعنی \عددی{\left(1+\epsilon \right) R_2} ہو جہاں \عددی{\epsilon=0.05} کے برابر ہے۔اسی طرح افزائش کی زیادہ سے زیادہ قیمت اس وقت حاصل ہو گی جب \عددی{R_2} کی حقیقی قیمت \عددی{\SI{5}{\percent}} زیادہ جبکہ \عددی{R_1} کی حقیقی قیمت \عددی{\SI{5}{\percent}} کم ہو۔یوں
 \begin{align*}
-A_{\textrm{کمتر}}=-\frac{1-\epsilon}{1+\epsilon} \left(\frac{R_2}{R_1} \right)=-\frac{0.95}{1.05} \left(\frac{47000}{1000}\right)=-42.524\\
-A_{\textrm{بلندتر}}=-\frac{1+\epsilon}{1-\epsilon} \left(\frac{R_2}{R_1} \right)=-\frac{1.05}{0.95} \left(\frac{47000}{1000}\right)=-51.947
+A_{\text{کمتر}}=-\frac{1-\epsilon}{1+\epsilon} \left(\frac{R_2}{R_1} \right)=-\frac{0.95}{1.05} \left(\frac{47000}{1000}\right)=-42.524\\
+A_{\text{بلندتر}}=-\frac{1+\epsilon}{1-\epsilon} \left(\frac{R_2}{R_1} \right)=-\frac{1.05}{0.95} \left(\frac{47000}{1000}\right)=-51.947
 \end{align*}
 \انتہا{مثال}
 
@@ -1153,8 +1153,8 @@ R_{\textup{داخلی}}=R
 
 اس جواب کو یوں بھی حاصل کیا جا سکتا ہے۔حسابی ایمپلیفائر کے دونوں داخلی سروں  پر داخلی برقی رو صفر ہوتی ہے۔\عددی{v_k} پر داخلی برقی رو صفر  ہونے کی وجہ سے اسے کھلے سرے تصور کیا جا سکتا ہے۔اس طرح  \عددی{R_3} اور \عددی{R_4} کو \عددی{v_s} اور برقی زمین کے مابین سلسلہ وار جڑا تصور کیا جا سکتا ہے۔تمام مزاحمت برابر ہونے کی وجہ سے \عددی{v_o=\SI{0}{\volt}} ہے لہٰذا اسے برقی زمین تصور کیا جا سکتا ہے۔\عددی{v_n} پر برقی رو صفر ہونے کی وجہ سے اس داخلی سرے  کو بھی کھلے سرے تصور کیا جا سکتا ہے۔یوں \عددی{R_1} اور \عددی{R_2} کو بھی \عددی{v_s} اور برقی زمین کے مابین سلسلہ وار جڑا تصور کیا جا سکتا ہے۔اس طرح سلسلہ وار جڑے \عددی{R_1} اور \عددی{R_2} کو سلسلہ وار جڑے \عددی{R_3} اور \عددی{R_4} کے متوازی تصور کیا جا سکتا ہے لہٰذا
 \begin{align*}
-\frac{1}{R_{\textrm{داخلی}}}&=\frac{1}{R_1+R_2}+\frac{1}{R_3+R_4}=\frac{1}{2R}+\frac{1}{2R}=\frac{1}{R}\\
-R_{\textrm{داخلی}}&=R
+\frac{1}{R_{\text{داخلی}}}&=\frac{1}{R_1+R_2}+\frac{1}{R_3+R_4}=\frac{1}{2R}+\frac{1}{2R}=\frac{1}{R}\\
+R_{\text{داخلی}}&=R
 \end{align*}
 حاصل ہوتا ہے۔
 
@@ -1171,7 +1171,7 @@ i_b&=\frac{v_s}{R_3+R_4}
 \end{align*}
 کے برابر ہیں۔یوں
 \begin{align*}
-R_{\textrm{داخلی}}=\frac{v_s}{i_a+i_b}=\frac{R_1 \left(R_3+R_4 \right)}{R_1+R_3}
+R_{\text{داخلی}}=\frac{v_s}{i_a+i_b}=\frac{R_1 \left(R_3+R_4 \right)}{R_1+R_3}
 \end{align*}
 حاصل ہوتا ہے۔
 
@@ -1320,13 +1320,13 @@ v_1=4-0.003 \sin \omega  t
 
 دونوں داخلی سروں  پر یکساں برقی دباو کو مشترکہ برقی دباو کہتے ہیں جبکہ دونوں داخلی سروں  کے مابین برقی دباو کو تفرق برقی دباو کہتے ہیں۔یوں
 \begin{align*}
-v_{\textrm{مشترک}}&=\SI{4}{\volt}\\
+v_{\text{مشترک}}&=\SI{4}{\volt}\\
 v_{\textup{تفرق}}&=0.06 \sin \omega t
 \end{align*}
 ہیں۔یوں انہیں
 \begin{align*}
-v_2=v_{\textrm{مشترک}}+ \frac{v_{\textrm{تفرق}}}{2}\\
-v_1=v_{\textrm{مشترک}}-\frac{v_{\textrm{تفرق}}}{2}
+v_2=v_{\text{مشترک}}+ \frac{v_{\text{تفرق}}}{2}\\
+v_1=v_{\text{مشترک}}-\frac{v_{\text{تفرق}}}{2}
 \end{align*}
 لکھا جا سکتا ہے۔
 
@@ -1449,7 +1449,7 @@ A_d&=\left(\frac{1+\frac{R_4}{R_3}}{1+\frac{R_3'}{R_4'}} \right)\left(\frac{1}{2
 \item
 کمتر \عددی{CMRR} اس وقت حاصل ہو گی جب مشترکہ افزائش بلند تر جبکہ تفرق افزائش کمتر ہو یعنی
 \begin{align*}
-CMRR_{\textrm{کمتر}}=\abs{\frac{A_d{\textrm{کمتر}}}{A_c{\textrm{بلندتر}}}}
+CMRR_{\text{کمتر}}=\abs{\frac{A_d{\text{کمتر}}}{A_c{\text{بلندتر}}}}
 \end{align*} 
 \عددی{A_c} کی بلند تر قیمت اس وقت حاصل ہو گی جب \عددی{\tfrac{R_3'R_4}{R_4'R_3}} کی قیمت کم سے کم ہو یعنی
 \begin{align*}
@@ -1466,13 +1466,13 @@ R_2=(1-0.01)100000=99000
 \end{align*}
 ہوں۔ان  سے
 \begin{align*}
-CMRR_{\textrm{کمتر}}=1030
+CMRR_{\text{کمتر}}=1030
 \end{align*}
 حاصل ہوتا ہے۔
 \item
 \عددی{R_1=\SI{1}{\kilo \ohm}} کرنے سے
 \begin{align*}
-CMRR_{\textrm{کمتر}}=9852
+CMRR_{\text{کمتر}}=9852
 \end{align*}
 ہو جاتا ہے۔
 \item
@@ -1487,7 +1487,7 @@ R_2=R_2'=(1-0.01)10000=9900
 \end{align*}
 اور 
 \begin{align*}
-CMRR_{\textrm{کمتر}}=814
+CMRR_{\text{کمتر}}=814
 \end{align*}
 حاصل ہوتا ہے۔
 \end{itemize}
@@ -1532,12 +1532,12 @@ CMRR_{\textrm{کمتر}}=814
 \end{align*}
 جب تک یہ مقدار حسابی ایمپلیفائر کے \اصطلاح{رفتار چال} سے کم ہو اس وقت تک حسابی ایمپلیفائر خوش اسلوبی سے اس اشارے کو خارج کرے گا۔جیسے ہی یہ مقدار \اصطلاح{رفتار چال} سے بڑھ جائے، حسابی ایمپلیفائر کے خارجی اشارے میں خلل پیدا ہو جائے گا۔حسابی ایمپلیفائر کے \اصطلاح{رفتار چال} کو اس کی \اصطلاح{پوری طاقت پر تعددی دائرہ کارکردگی}\فرہنگ{پورے طاقت پر دائرہ کارکردگی}\حاشیہب{full power band width} کی شکل میں یوں بیان کیا جاتا ہے
 \begin{align}
-\omega_{\textrm{دائرہ کارکردگی}}=\frac{\textrm{رفتار چال}}{V_p}\\
-f_{\textrm{دائرہ کارکردگی}}=\frac{\textrm{رفتار چال}}{2 \pi V_p}
+\omega_{\text{\RL{دائرہ کارکردگی}}}=\frac{\text{\RL{رفتار چال}}}{V_p}\\
+f_{\text{\RL{دائرہ کارکردگی}}}=\frac{\text{\RL{رفتار چال}}}{2 \pi V_p}
 \end{align}   
 جہاں \عددی{V_p} حسابی ایمپلیفائر کی زیادہ سے زیادہ ممکنہ  خارجی برقی دباو ہے۔کم برقی دباو خارج کرتے ہوئے اس تعدد کی قیمت بڑھ جاتی ہے۔یوں \عددی{V_0} برقی دباو خارج کرتے ہوئے
  \begin{align}
-\omega_{\textrm{بلند تر}}=\frac{\textrm{رفتار چال}}{V_0}
+\omega_{\text{\RL{بلند تر}}}=\frac{\text{\RL{رفتار چال}}}{V_0}
 \end{align}   
 ہو گا۔شکل \حوالہ{شکل_حسابی_رفتار_چال_محدود_اشارہ} میں خارجی اشارے پر رفتار چال کا اثر دکھایا گیا ہے۔یہ اشارہ  اپنی اصل صورت کھو کر تکونی شکل اختیار کر گیا ہے جہاں تکون کے اطراف \عددی{رفتار چال} سے بلند اور پست ہو رہے ہیں۔
 \begin{figure}
@@ -2157,11 +2157,11 @@ v_{s2}=v_m-\frac{v_f}{2}
 \end{align*}
 کے داخلی اشارات منفی کار کو مہیا کئے جاتے ہیں جہاں \عددی{v_m} کو \اصطلاح{مشترکہ اشارہ}\فرہنگ{مشترکہ اشارہ}\حاشیہب{common mode signal} جبکہ \عددی{v_f} کو \اصطلاح{تفرق اشارہ}\فرہنگ{تفرق اشارہ}\حاشیہب{differential mode signal} کہتے ہیں۔خارجی مساوات کو
 \begin{align}
-v_o=A_{\textrm{مشترک}} v_m +A_{\textrm{تفرق}} v_f
+v_o=A_{\text{مشترک}} v_m +A_{\text{تفرق}} v_f
 \end{align}
 صورت میں لکھیں۔مشترکہ افزائش تقسیمِ تفرق افزائش کو \اصطلاح{مشترکہ اشارہ رد کرنے کے صلاحیت}\فرہنگ{مشترکہ اشارہ رد کرنے کے صلاحیت}\حاشیہب{common mode rejection ratio CMRR} \تحریر{CMRR} کہتے ہیں۔ثابت کریں کہ
 \begin{align*}
-CMRR=\frac{A_{\textrm{تفرق}}}{A_{\textrm{مشترک}}}=\frac{1+\frac{1}{2}\left(\frac{R_1}{R_2}+\frac{R_3}{R_4} \right)}{\frac{R_1}{R_2}-\frac{R_3}{R_4}}
+CMRR=\frac{A_{\text{تفرق}}}{A_{\text{مشترک}}}=\frac{1+\frac{1}{2}\left(\frac{R_1}{R_2}+\frac{R_3}{R_4} \right)}{\frac{R_1}{R_2}-\frac{R_3}{R_4}}
 \end{align*}
 کے برابر ہے۔
 
